--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="index.html"><img src="images/draadjelos_woordmerk.png" alt="draadjelos woordmerk"></a>
     </header>
     <main>
-
+        <img class="shirt" src="images/shirt.png" alt="eindresultaat shirt">
     </main>
     <footer>
         <nav>
