--- a/proces.html
+++ b/proces.html
@@ -11,7 +11,7 @@
         <a href="index.html"><img src="images/draadjelos_woordmerk.png" alt="draadjelos woordmerk"></a>
     </header>
 
-    <main>
+    <main class="proceslijn">
         
     </main>
     <footer>
