--- a/proces.html
+++ b/proces.html
@@ -6,19 +6,27 @@
     <title>Draadjelos Repair café - Proces</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
-<body>
+<body class="procespagina">
     <header>
         <a href="index.html"><img src="images/draadjelos_woordmerk.png" alt="draadjelos woordmerk"></a>
     </header>
 
     <main class="proceslijn">
-        
+        <h1>Proceslijn</h1>
+        <div class="kapottebroek">
+            <img src="images/broekstart.jpg" alt="kapotte broek">
+            <div class="patch">
+                <section class="beginproces">
+                    <h2>Wat heeft DraadjeLos te bieden?</h2>
+                    <P>DraadjeLos geeft jou de mogelijkheid om jouw oude kleren een tweede leven te geven! Favo kledingsstuk kapot? Kom dan Langs!</P>
+                </section>
+            </div>
     </main>
     <footer>
         <nav>
             <ul>
                 <li><a href="index.html"><img src="images/schaar_icoon.png" alt="schaaricoon"></a></li>
-                <li><a href="proces.html"><img src="images/bolletjewol.png" alt="bolletjewol"></a></li>
+                <li><a href="proces.html"><img src="images/bolletjewol_licht.png" alt="bolletjewol"></a></li>
                 <li><a href="gereedschap.html"><img src="images/naaimachine_icoon.png" alt="naaimachineicoon"></a></li>
             </ul>
         </nav>
