--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
     <header>
         <a href="index.html"><img src="images/draadjelos_woordmerk.png" alt="draadjelos woordmerk"></a>
     </header>
-    <main>
-        <img class="shirt" src="images/shirt.png" alt="eindresultaat shirt">
+    <main class="homepagina">
+        <h1>Hét Repaircafé van Amsterdam!</h1>
+        <div class="flexboxshirt">
+            <div class="patch">
+                <section class="introtekst">
+                    <h2>Wat heeft DraadjeLos te bieden?</h2>
+                    <P>DraadjeLos geeft jou de mogelijkheid om jouw oude kleren een tweede leven te geven! Favo kledingsstuk kapot? Kom dan Langs!</P>
+                </section>
+            </div>
+            <img class="shirt" src="images/shirt.png" alt="eindresultaat shirt">
+        </div>
+        <div class="flexboxbroek">
+            <img src="images/broek.png" alt="eindresultaat broek">
+            <div class="patch">
+                <section class="werknemers">
+                    <h2>Het lukt me niet alleen... Geen nood!</h2>
+                    <P>DraadjeLos geeft jou de mogelijkheid om jouw oude kleren een tweede leven te geven! Favo kledingsstuk kapot? Kom dan Langs!</P>
+                </section>
+            </div>
+        </div>
     </main>
     <footer>
         <nav>
             <ul>
-                <li><a href="index.html"><img src="images/schaar_icoon.png" alt="schaaricoon"></a></li>
+                <li><a href="index.html"><img src="images/schaar_icoon_licht.png" alt="schaaricoon"></a></li>
                 <li><a href="proces.html"><img src="images/bolletjewol.png" alt="bolletjewol"></a></li>
                 <li><a href="gereedschap.html"><img src="images/naaimachine_icoon.png" alt="naaimachineicoon"></a></li>
             </ul>
