--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <P>DraadjeLos geeft jou de mogelijkheid om jouw oude kleren een tweede leven te geven! Favo kledingsstuk kapot? Kom dan Langs!</P>
                 </section>
             </div>
-            <img class="shirt" src="images/shirt.png" alt="eindresultaat shirt">
+            <img src="images/shirt.png" alt="eindresultaat shirt">
         </div>
         <div class="flexboxbroek">
             <img src="images/broek.png" alt="eindresultaat broek">
