--- a/proces.html
+++ b/proces.html
@@ -17,11 +17,29 @@
             <img src="images/broekstart.jpg" alt="kapotte broek">
             <div class="patch">
                 <section class="beginproces">
-                    <h2>Wat heeft DraadjeLos te bieden?</h2>
+                    <h2>Fase 1: kapot item</h2>
+                    <P>Je neemt je kapotte kledingsstuk mee. Deze bevat gaten/scheuren of het kledingsstuk kan de oorspronkelijke functie niet meer uitvoeren</P>
+                </section>
+            </div>
+        </div>
+        <div class="reparatie">
+            <div class="patch">
+                <section class="reparatietekst">
+                    <h2>Fase 2: Repareren!</h2>
                     <P>DraadjeLos geeft jou de mogelijkheid om jouw oude kleren een tweede leven te geven! Favo kledingsstuk kapot? Kom dan Langs!</P>
                 </section>
             </div>
-    </main>
+            <img src="images/broekproces.jpg" alt="Repareren van de broek">
+        </div>
+        <div class="eindproduct">
+            <img src="images/eindoutfit.jpg" alt="gerepareerde kleding aangetrokken">
+            <div class="patch">
+                <section class="eindproducttekst">
+                    <h2>Fase 3: Nieuwe look!</h2>
+                    <P>Je neemt je kapotte kledingsstuk mee. Deze bevat gaten/scheuren of het kledingsstuk kan de oorspronkelijke functie niet meer uitvoeren</P>
+                </section>
+            </div>
+        </div>
     <footer>
         <nav>
             <ul>
