--- a/gereedschap.html
+++ b/gereedschap.html
@@ -10,8 +10,35 @@
     <header>
         <a href="index.html"><img src="images/draadjelos_woordmerk.png" alt="draadjelos woordmerk"></a>
     </header>
-    <main>
-        
+    <main class="gereedschapspagina">
+        <h1>Gereedschap en Materialen</h1>
+        <div class="materialen">
+            <img src="images/materialen.png" alt="materialen">
+            <div class="patch">
+                <section class="materialentekst">
+                    <h2>Fase 1: kapot item</h2>
+                    <P>Je neemt je kapotte kledingsstuk mee. Deze bevat gaten/scheuren of het kledingsstuk kan de oorspronkelijke functie niet meer uitvoeren</P>
+                </section>
+            </div>
+        </div>
+        <div class="naaimachine">
+            <div class="patch">
+                <section class="naaimachinetekst">
+                    <h2>Fase 2: Repareren</h2>
+                    <P>Samen met de werknemers en een kamer vol met materialen die hergebruikt kunnen worden, kan jij aan de slag om je kleding te repareren!</P>
+                </section>
+            </div>
+            <img src="images/naaimachine.png" alt="Juki naaimachine met scherm">
+        </div>
+        <div class="naaimachinetwee">
+            <img src="images/naaimachinetwee.png" alt="Juki naaimachine voor ritsen">
+            <div class="patch">
+                <section class="naaimachinetweetekst">
+                    <h2>Fase 3: Nieuwe look!</h2>
+                    <P>Gefeliciteerd, je hebt je kleding een tweede leven gegeven!</P>
+                </section>
+            </div>
+        </div>
     </main>
     <footer>
         <nav>
