--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="patch">
                 <section class="werknemers">
                     <h2>Het lukt me niet alleen... Geen nood!</h2>
-                    <P>DraadjeLos geeft jou de mogelijkheid om jouw oude kleren een tweede leven te geven! Favo kledingsstuk kapot? Kom dan Langs!</P>
+                    <P>Onze werknemers zijn aanwezig om jou op weg te helpen met het gereedschap en technieken om je eigen kleding te herstellen!</P>
                 </section>
             </div>
         </div>
