--- a/proces.html
+++ b/proces.html
@@ -25,8 +25,8 @@
         <div class="reparatie">
             <div class="patch">
                 <section class="reparatietekst">
-                    <h2>Fase 2: Repareren!</h2>
-                    <P>DraadjeLos geeft jou de mogelijkheid om jouw oude kleren een tweede leven te geven! Favo kledingsstuk kapot? Kom dan Langs!</P>
+                    <h2>Fase 2: Repareren</h2>
+                    <P>Samen met de werknemers en een kamer vol met materialen die hergebruikt kunnen worden, kan jij aan de slag om je kleding te repareren!</P>
                 </section>
             </div>
             <img src="images/broekproces.jpg" alt="Repareren van de broek">
@@ -36,7 +36,7 @@
             <div class="patch">
                 <section class="eindproducttekst">
                     <h2>Fase 3: Nieuwe look!</h2>
-                    <P>Je neemt je kapotte kledingsstuk mee. Deze bevat gaten/scheuren of het kledingsstuk kan de oorspronkelijke functie niet meer uitvoeren</P>
+                    <P>Gefeliciteerd, je hebt je kleding een tweede leven gegeven!</P>
                 </section>
             </div>
         </div>
