--- a/gereedschap.html
+++ b/gereedschap.html
@@ -16,16 +16,16 @@
             <img src="images/materialen.png" alt="materialen">
             <div class="patch">
                 <section class="materialentekst">
-                    <h2>Fase 1: kapot item</h2>
-                    <P>Je neemt je kapotte kledingsstuk mee. Deze bevat gaten/scheuren of het kledingsstuk kan de oorspronkelijke functie niet meer uitvoeren</P>
+                    <h2>Materialen</h2>
+                    <P>Lappen stof, knopen, ritsen, jeans en nog veel meer materialen zijn er om je kleding te repareren!</P>
                 </section>
             </div>
         </div>
         <div class="naaimachine">
             <div class="patch">
                 <section class="naaimachinetekst">
-                    <h2>Fase 2: Repareren</h2>
-                    <P>Samen met de werknemers en een kamer vol met materialen die hergebruikt kunnen worden, kan jij aan de slag om je kleding te repareren!</P>
+                    <h2>Hoge kwaliteit naaimachines!</h2>
+                    <P>Alle naaimachines zijn van het merk Juki. Dit merk is zeer betrouwbaar en nauwkeurig in haar steken!</P>
                 </section>
             </div>
             <img src="images/naaimachine.png" alt="Juki naaimachine met scherm">
@@ -34,8 +34,8 @@
             <img src="images/naaimachinetwee.png" alt="Juki naaimachine voor ritsen">
             <div class="patch">
                 <section class="naaimachinetweetekst">
-                    <h2>Fase 3: Nieuwe look!</h2>
-                    <P>Gefeliciteerd, je hebt je kleding een tweede leven gegeven!</P>
+                    <h2>Verschillende soorten naaimachines!</h2>
+                    <P>Een overlock naaimachine, waar geen losse spoeltjes in hoeven is aanwezig!</P>
                 </section>
             </div>
         </div>
