--- a/gereedschap.html
+++ b/gereedschap.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draadjelos Repair café - Gereedschap</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" href="images/logo.png">
 </head>
 <body>
     <header>
