--- a/gereedschap.html
+++ b/gereedschap.html
@@ -36,7 +36,7 @@
             <div class="patch">
                 <section class="naaimachinetweetekst">
                     <h2>Verschillende soorten naaimachines!</h2>
-                    <P>Een overlock naaimachine, waar geen losse spoeltjes in hoeven is aanwezig!</P>
+                    <P>Een overlock naaimachine, waar geen losse spoeltjes in hoeft is aanwezig!</P>
                 </section>
             </div>
         </div>
