--- a/proces.html
+++ b/proces.html
@@ -40,7 +40,7 @@
                 </section>
             </div>
         </div>
-        <p>Ik wil mijn oma bedanken voor het helpen met het naaiwerk van de kleding (zie bovenstaande afbeeldingen) </p>
+        <p class="shoutoutoma">Ik wil mijn oma bedanken voor het helpen met het naaiwerk van de kleding (zie bovenstaande afbeeldingen) </p>
     </main>
     <footer>
         <nav>
